...
    return(
      <View style={{height: '100%'}}>
        <Header title='Notifications' />
        <View
          style={styles.listContainer}>
          <View
            testID='notification-container'
            style={styles.sectionTitle}>
            <Text style={styles.sectionTitleText}>
              Most Recent
            </Text>
          </View>
          <SwipeListView
...
