import React, { Component } from 'react';
import { View, TouchableOpacity, Text, Image } from 'react-native';
import { connect } from 'react-redux';
import { bindActionCreators } from 'redux';

// Libraries
import SVGImage from 'react-native-svg-image';
import LinearGradient from 'react-native-linear-gradient';
import OneSignal from 'react-native-onesignal';
import Contacts from 'react-native-contacts';

// Components
import ConnectButton from '../SuperConnectScreen/ConnectButton';

// HOC
import LinearGradientWrapper from '../../HOCs/LinearGradientWrapper';

// Redux
import PermissionsStoreActions, { setGeoPermission } from '../../Redux/PermissionsStore';
import FriendStoreActions from '../../Redux/FriendStore'
import NotificationStoreActions, { registerForPushNotif } from '../../Redux/NotificationStore'

// Images
import { Images } from '../../Themes';
import { isIpad } from '../../Utils/constants'

// Styles
import styles from '../Styles/PermissionsScreenStyles';

class PermissionScreen extends Component {
  constructor(props) {
    super(props)

    this.state = {
      deviceId: null
    }
  }

  handleNotNow = () => {
    // redux action to continue WITHOUT gelocation
    this.props.navigation.navigate('LaunchScreen')
  }

  handleOkay = () => {
    // redux action to continue WITH gelocation
    const {
      navigation,
      permissionType,
      storeContactInfo,
      grantLocationPermission,
      grantNotificationPermission,
      nativeNotifications
    } = this.props
    const { navigate } = navigation

    if (permissionType === 'geolocation') {
      grantLocationPermission(true)
      if (!nativeNotifications) {
        navigate('PermissionScreen', { permissionType: 'notifications', navigation: navigation })
      } else {
          navigate('ForkScreen', { navigation: navigation })
      }
    } else {
      grantNotificationPermission(true)
      navigate('ForkScreen', { navigation: navigation })
    }
  }

  determineText = () => {
    const { permissionType } = this.props

    return permissionType === 'geolocation' ?
    'See all the new cool people around you. Without access, friendthem is no fun. Check your phone settings to make changes.' :
    'To let you know about recent activity and make sure you dont miss any connections! You can silence notifications in your settings.'
  }

  determineTitle = () => {
    const { permissionType } = this.props

    return permissionType === 'geolocation' ?
    'WE WOULD LIKE TO ACCESS YOUR LOCATION' :
    'WE WOULD ALSO LIKE TO SEND YOU NOTIFICATIONS'
  }

  determineImage = () => {
    const { permissionType } = this.props

    return permissionType === 'geolocation' ?
    Images.geolocationPNG : Images.notificationsSVG
  }

  render() {
    const { permissionType } = this.props

    return (
          <View style={styles.container}>
            <View>
              <Text style={[styles.text, { fontSize: 18 }]}>
                {this.determineTitle()}
              </Text>
            </View>

            <View style={styles.spacing}>
              <Text style={[styles.text, { fontSize: 14 }]}>
                {this.determineText()}
              </Text>
            </View>

            <View style={styles.spacing}>
              <Image
                style={
                  isIpad && permissionType === 'geolocation' ? styles.iPadImage
                  : ''
                }
                source={this.determineImage()}
              />
            </View>

             <View testID={'button_container'} style={styles.buttonContainer}>
               <ConnectButton
                 testID={'connect_button_not_now'}
                 title="NOT NOW"
                 containerStyle={styles.button}
                 textStyle={styles.buttonTextStyle}
                 onPressCallback={() => this.handleNotNow()}
               />
              <View testID={'connect_button_okay'}>
                <ConnectButton
                  title="OKAY!"
                  containerStyle={styles.button}
                  textStyle={styles.buttonTextStyle}
                  onPressCallback={() => this.handleOkay()}
                />
              </View>
             </View>
          </View>
    )
  }
}

const mapStateToProps = state => {
  return {
    accessToken: state.authStore.accessToken,
    nativeNotifications: state.permissionsStore.nativeNotifications,
  }
}

const mapDispatchToProps = dispatch => {
  const {
    grantLocationPermission,
    grantNotificationPermission
   } = PermissionsStoreActions
  const { setFriendInfo } = FriendStoreActions

  return {
    ...bindActionCreators({
      setFriendInfo,
      grantLocationPermission,
      grantNotificationPermission,
      registerForPushNotif
    }, dispatch)
  }
}

export default connect(mapStateToProps, mapDispatchToProps)(LinearGradientWrapper(PermissionScreen))
