...
              auth={true}
              headerText='Whoops!'
              text={this.authErrorMessage()}
              okActionCallback={clearAuthErrors}
            />
            <View
              testID='tab-selection-container'
              style={styles.tabSelectionContainer}>
              <TouchableOpacity
                onPress={() => this.setState({ tab: "Networks" })}
                style={[styles.tabItem, tab === "Networks" ? styles.selected : null]}>
                <Text
                  style={[styles.tabText, tab === "Networks" ? styles.selectedText : null]}
                >
                  SOCIAL NETWORKS
                </Text>
              </TouchableOpacity>
              <TouchableOpacity
                testID='personal-info-tab'
                onPress={() => this.setState({ tab: "Info" })}
                style={[styles.tabItem, tab === "Info" ? styles.selected : null]}>
                <Text
                  style={[styles.tabText, tab === "Info" ? styles.selectedText : null]}
                  >
                  PERSONAL INFO
...
