...
              </Text>
            </View>
          </LinearGradient>
          <ScrollView style={styles.scrollView}>
          <View style={styles.sectionTitle}>
            <Text style={styles.sectionTitleText}>
              General Settings
            </Text>
          </View>
          <Modal
            animationIn="slideInUp"
            animationOut="slideOutDown"
            onBackdropPress={this.toggleTNCModal}
...
              Contact Us!
            </Text>
          </View>
          {this.renderEmailLinks()}
          <TouchableOpacity
            activeOpacity={1}
            testID={'logout_button'}
            style={styles.logOutButton}
            onPress={() => toggleModal()}
            >
            <Image
              source={Images.powerIcon}
              />
...
